--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "detect-file-encoding-and-language": "^2.4.0",
+    "dotenv": "^16.3.1",
     "express": "4.17.1",
     "joi": "^17.11.0",
     "mongodb": "^6.1.0",
