--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
     "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.2"
   },
   "devDependencies": {
